# GraphingCalculator

./: .gitignore  Ast.h  Builtins.cpp  Builtins.h  CMakeLists.txt  CMakePresets.json  Cmakepresets.json  Diagcode.h  Errors.txt  LICENSE  Parser.cpp  README.md  Repl.cpp  Repl.h  Simplifier.h  Stringtable.cpp  Stringtable.h  Tokenizer.h  VMbytecode.cpp  VMbytecode.h  test_framework.h  test_main.cpp
.github/workflows/: ci.yml
cmake/: Config.cmake.in
data/: Commands.txt  Errors.txt  Help.txt  Ui.txt
src/capi/: CalcC.cpp  CalcC.h  calc_c.cpp  calc_c.h
src/core/: Ast.h  Builtins.cpp  Builtins.h  Bytecode.h  CalculatorCore.cpp  CalculatorCore.h  DiagCode.h  Parser.cpp  Parser.h  Printer.cpp  Printer.h  Simplifier.cpp  Simplifier.h  Tokenizer.cpp  Tokenizer.h  Types.h  VMbytecode.cpp  VMbytecode.h
src/frontend/: Grapher.cpp  Grapher.h  Repl.cpp  Repl.h  StringTable.cpp  StringTable.h  main.cpp
tests/: expr_generator.h  test_capi.cpp  test_evaluator.cpp  test_framework.h  test_main.cpp  test_plot.cpp  test_printer.cpp  test_property.cpp  test_repl.cpp  test_simplifier.cpp  test_support.h  test_tokenizer.cpp
